# dfaProject

./: CMakeLists.txt  dfa2re.cpp  main.cpp  quick_setup.sh  re2dfa.cpp
